adding the last bit of code

--- a/starter/index.html
+++ b/starter/index.html
@@ -7,6 +7,8 @@
   <title>M4 Challenge</title>
 </head>
 <body>
-  <script src="index.js"></script>
+  <h1> Consoles Finances Project </h1>
+  <h2> Chrome developer tools (console to view)</h2>
 </body>
+<script src="/Console-Finances/starter/index.js"></script>
 </html>
