--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
   <h1> Consoles Finances Project </h1>
   <h2> Chrome developer tools (console to view)</h2>
 </body>
-<script src="/Console-Finances/starter/index.js"></script>
+<script src="/index.js"></script>
 </html>
